--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
+		<link href="http://localhost/lara/public/build/app.css" rel="stylesheet"/>
+		<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+
+		<script src="http://localhost/lara/public/build/app.js" defer></script>
+		
+		<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet"> {% block stylesheets %}{% endblock %}{% block javascripts %}{% endblock %}
+		</head>
+		<body>
+
+		{% include 'menu.html.twig' %}
+			<main class="py-4">
+				{% if errors is defined and errors|length > 0 %}
+					{% include 'msg/validation.html.twig' %}
+				{% endif %}
+
+				{% if success is defined and success|length > 0 %}
+					{% include 'msg/success.html.twig' %}
+				{% endif %}
+
+				{% block body %}{% endblock %}
+			</main>
+		</body>
+	</html>
